2002-11-28  Heikki Junes <hjunes@cc.hut.fi>

	* input/test/to-xml.ly:
	* lily/ligature-engraver.cc: Fixes documentation.

	* lilypond.mandrake.spec.in:
	* lilypond.redhat.spec.in: Add lilypond.words.

	* Documentation/user/refman.itely: Mention Info inside emacs.
	
2002-11-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/ly2dvi.py (run_dvips): Use ly.read_pipe () instead of
	os.popen.read ().

2002-11-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/ly2dvi.py (include_path): print warning if failing anything.

	* python/lilylib.py (error): add space

2002-11-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* GNUmakefile.in (EXTRA_DIST_FILES): add lilypond.words for
	distribution.

2002-11-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/paper-outputter.cc (Paper_outputter): close port when
	finishing score.

2002-11-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/sodipodi.scm: Fixes.

2002-11-26  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: Look shortcuts in menu from keymap, if possible.

	* buildscripts/make-font-dir.py: Fix. 

2002-11-25  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: Add support for Info inside Emacs.

2002-11-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/make-font-dir.py: 
	* mf/GNUmakefile: Make sodipodi font map.

	* scm/sodipodi.scm: Add more output functions.

	* mf/feta-nummer.mf: 
	* mf/feta-beugel.mf: Add font_coding_scheme.

	* lily/paper-outputter.cc (output_header): Fix creator string.

2002-11-23  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el (LilyPond-autocompletion): invoked with
	[S-iso-lefttab], fixes at bol and eol, descriptive variable names.

	* lilypond.words: add two (Everybody can add/remove words now!).

	* debian/rules:
	* make/lilypond.suse.spec.in:
	* make/lilypond.mandrake.spec.in:
	* make/lilypond.redhat.spec.in: Add lilypond.words for emacs-files.

	* Documentation/user/refman.itely: Mention autocompletion.

2002-11-23  Jan Nieuwenhuizen  <janneke@gnu.org>
